 * Issue #260: process's mapped memory regions. (Windows patch by wj32.64)
 * Issue #262: (Windows) psutil.disk_partitions() was slow due to inspecting
   the floppy disk drive also when "all" argument was False.
 * Issue #273: psutil.get_process_list() is deprecated.
 * Issue #274: psutil no longer requires 2to3 at installation time in order to
   work with Python 3.

BUGFIXES

 * Issue #193: psutil.Popen constructor can throw an exception if the spawned
   process terminates quickly.
 * Issue #240: (OSX) incorrect use of free() for Process.get_connections().
 * Issue #244: (POSIX) Process.wait() can hog CPU resources if called against
   a process which is not our children.
 * Issue #248: (Linux) psutil.network_io_counters() might return erroneous NIC
   names.
 * Issue #252: (Windows) process getcwd() erroneously raise NoSuchProcess for
   processes owned by another user.  It now raises AccessDenied instead.
 * Issue #266: (Windows) psutil.get_pid_list() only shows 1024 processes.
   (patch by Amoser)
 * Issue #267: (OSX) Process.get_connections() - an erroneous remote address
   was returned. (Patch by Amoser)
 * Issue #272: (Linux) Porcess.get_open_files() - potential race condition can
   lead to unexpected NoSuchProcess exception.  Also, we can get incorrect
   reports of not absolutized path names.
 * Issue #275: (Linux) Process.get_io_counters() erroneously raise NoSuchProcess
   on old Linux versions. Where not available it now raises NotImplementedError.

API CHANGES

 * psutil.get_process_list() is deprecated.


0.4.1 - 2011-12-14
------------------

BUGFIXES

 * Issue 228: some example scripts were not working with python 3.
 * Issue 230: (Windows / OSX) memory leak in Process.get_connections().
 * Issue 232: (Linux) psutil.phymem_usage() can report erroneous values which
   are different than "free" command.
 * Issue 236: (Windows) memory/handle leak in Process's get_memory_info(),
   suspend() and resume() methods.


0.4.0 - 2011-10-29